se continuo con el desarollo

--- a/index.html
+++ b/index.html
@@ -41,11 +41,26 @@
         <section>
             <div>
                 <img src="./assets/logo_azul.png" alt="Logo Richmond Capital">
-                <img src="./assets/celular.jpg" alt="Imagen de celular con App de Richmond Capital" width="2000">
+                <img src="./assets/celular.jpg" alt="Imagen de celular con App de Richmond Capital" width="200">
+            </div>
+            <div>
+                <div>
+                    <p>Transformá tu manera de invertir</p>
+                </div>
+                <div>
+                    <button>
+                        <a href="https://inversor.inviu.com.ar/login">Operá</a>
+                    </button>
+                    <button>
+                        <a href="https://inversor.inviu.com.ar/login">Abrir Cuenta</a>
+                    </button>
+                </div>
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
