se quito las paginas, se quito lo hablado con nacho

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
         <div>
             <nav>
                 <button>
-                    <a href="./pages/servicios.html">
-                        Servicios
+                    <a href=>
+                        Home
                     </a>
                 </button>
                 <button>
-                    <a href="./pages/contacto.html">
+                    <a href=>
+                        Productos
+                    </a>
+                </button>
+                <button>
+                    <a href=>
                         Research
-                    </a>
-                </button>
-                <button>
-                    <a href="./pages/contacto.html">
-                        Contacto
                     </a>
                 </button>
             </nav>
@@ -40,7 +40,6 @@
     <main>
         <section>
             <div>
-                <img src="./assets/logo_azul.png" alt="Logo Richmond Capital">
                 <img src="./assets/celular.jpg" alt="Imagen de celular con App de Richmond Capital" width="200">
             </div>
             <div>
@@ -56,6 +55,12 @@
                     </button>
                 </div>
             </div>
+        </section>
+        <section>
+            <h1>Productos</h1>
+        </section>
+        <section>
+            <h1>Research</h1>
         </section>
     </main>
     <footer>
