--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Richmond Capital</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
@@ -20,18 +22,18 @@
         <div>
             <nav>
                 <button>
-                    <a href=>
+                    <a href="index.html">
                         Home
                     </a>
                 </button>
                 <button>
-                    <a href=>
+                    <a href= "#productos">
                         Productos
                     </a>
                 </button>
                 <button>
-                    <a href=>
-                        Research
+                    <a href= "#research">
+                        
                     </a>
                 </button>
             </nav>
@@ -44,7 +46,9 @@
             </div>
             <div>
                 <div>
-                    <p>Transformá tu manera de invertir</p>
+                    <p>Invertí.
+                        De manera simple.
+                        Y segura.</p>
                 </div>
                 <div>
                     <button>
@@ -56,15 +60,15 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="productos">
             <h1>Productos</h1>
         </section>
-        <section>
+        <section id="research">
             <h1>Research</h1>
         </section>
     </main>
     <footer>
-        
+
     </footer>
 </body>
 
