se aniadio el isotipo, se corrigieorn los direccionamientos de los links, se modifico la imagen del celular, se cambio el parrafo principal, se aniadieron las cards, se aniadio el footer, se aniadio css y el compilador sass, y se agregaron las nuevas paginas.html

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
     <header>
         <div>
             <a href="./index.html">
-                <img src="./assets/isotipo_celeste.png" alt="Logo celeste Richmond Capital">
+                <img src="./assets/imagotipo.png" alt="Imagotipo richmond capital">
             </a>
-            <a href="./index.html">
+            <a href="https://www.inviu.com.ar/" target="_blank">
                 <img src="./assets/605cd3b568ff6_700_491.png" alt="Logo Inviu">
             </a>
         </div>
         <div>
             <nav>
                 <button>
-                    <a href="index.html">
+                    <a href="./index.html">
                         Home
                     </a>
                 </button>
                 <button>
-                    <a href= "#productos">
+                    <a href="#productos">
                         Productos
                     </a>
                 </button>
                 <button>
-                    <a href= "#research">
-                        
+                    <a href="#research">
+                        Research
                     </a>
                 </button>
             </nav>
@@ -42,7 +42,15 @@
     <main>
         <section>
             <div>
-                <img src="./assets/celular.jpg" alt="Imagen de celular con App de Richmond Capital" width="200">
+                <button>
+                    <a href="https://inversor.inviu.com.ar/login" target="_blank">Operá</a>
+                </button>
+                <button>
+                    <a href="./pages/abrir_cuenta.html">Abrir Cuenta</a>
+                </button>
+            </div>
+            <div>
+                <img src="./assets/celularGrande.jpg" alt="Imagen de celular con App de Richmond Capital" width="200">
             </div>
             <div>
                 <div>
@@ -50,25 +58,49 @@
                         De manera simple.
                         Y segura.</p>
                 </div>
-                <div>
-                    <button>
-                        <a href="https://inversor.inviu.com.ar/login">Operá</a>
-                    </button>
-                    <button>
-                        <a href="https://inversor.inviu.com.ar/login">Abrir Cuenta</a>
-                    </button>
-                </div>
             </div>
         </section>
         <section id="productos">
-            <h1>Productos</h1>
-        </section>
-        <section id="research">
-            <h1>Research</h1>
+            <div>
+                <h1>Productos</h1>
+            </div>
+            <div>
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Acciones</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Bonos</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">CEDEARS</h5>
+                    </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Fondos</h5>
+                    </div>
+                </div>
+            </div>
+
+
         </section>
     </main>
     <footer>
-
+        <div>
+            <p>Av. Corrientes 415 - CABA</p>
+            <p>Buenos Aires - Argentina</p>
+            <p>info@richmondcapital.com.ar</p>     
+            <p><a href="https://www.rabello.com/Aranceles%20y%20comisiones%20ARG.pdf" target="_blank">Comisiones y Aranceles</a></p>   
+        </div>
     </footer>
 </body>
 
