--- a/index.html
+++ b/index.html
@@ -7,40 +7,47 @@
     <title>Richmond Capital</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-dTRn4DeN10f6qy9wCofnhwSlBh0sO6vP86k7IlK+yj4z3zj+Z7rF1nFK65IEMW5Z"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="./js/script.js"></script>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
-<body>
+<body class="container">
     <header>
-        <div>
+        <div class="logos">
             <a href="./index.html">
-                <img src="./assets/imagotipo.png" alt="Imagotipo richmond capital">
+                <img src="./assets/imagotipo.png" alt="Imagotipo richmond capital" width="100px">
             </a>
             <a href="https://www.inviu.com.ar/" target="_blank">
-                <img src="./assets/605cd3b568ff6_700_491.png" alt="Logo Inviu">
+                <img src="./assets/605cd3b568ff6_700_491.png" alt="Logo Inviu" width="100px">
+
             </a>
         </div>
-        <div>
-            <nav>
-                <button>
-                    <a href="./index.html">
-                        Home
-                    </a>
-                </button>
-                <button>
-                    <a href="#productos">
-                        Productos
-                    </a>
-                </button>
-                <button>
-                    <a href="#research">
-                        Research
-                    </a>
-                </button>
-            </nav>
-        </div>
+
+        <ul class="navli">
+            <li>
+                <a href="./index.html">
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="#productos">
+                    Productos
+                </a>
+            </li>
+            <li>
+                <a href="#research">
+                    Research
+                </a>
+            </li>
+        </ul>
+        
     </header>
     <main>
-        <section>
+        <section class="section1">
             <div>
                 <button>
                     <a href="https://inversor.inviu.com.ar/login" target="_blank">Operá</a>
@@ -60,36 +67,53 @@
                 </div>
             </div>
         </section>
-        <section id="productos">
+        <section class="section2">
             <div>
                 <h1>Productos</h1>
             </div>
-            <div>
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Acciones</h5>
+
+            <div class="card" style="width: 18rem;">
+                <div class="card-inner">
+                    <div class="front">
+                        <img src="./assets/icono_acciones.png" class="card-img-top" alt="Icono Acciones">
+
+                        <div class="card-body">
+                            <h5 class="card-title">Acciones</h5>
+                        </div>
+
                     </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Bonos</h5>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">CEDEARS</h5>
-                    </div>
-                </div>
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Fondos</h5>
+
+                    <div class="back">
+                        <div class="card-body">
+                            <h5 class="card-title">Acciones</h5>
+                            <p>
+                                sakjhaslsdhaljshdk
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-inner">
+                    <div class="front">
+                        <img src="./assets/icono_bonos.png" class="card-img-top" alt="Icono Bonos">
+
+                        <div class="card-body">
+                            <h5 class="card-title">Bonos</h5>
+                        </div>
+                    </div>
+
+                    <div class="back">
+                        <div class="card-body">
+                            <h5 class="card-title">Bonos</h5>
+                            <p>
+                                sakjhaslsdhaljshdk
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
 
         </section>
@@ -98,10 +122,14 @@
         <div>
             <p>Av. Corrientes 415 - CABA</p>
             <p>Buenos Aires - Argentina</p>
-            <p>info@richmondcapital.com.ar</p>     
-            <p><a href="https://www.rabello.com/Aranceles%20y%20comisiones%20ARG.pdf" target="_blank">Comisiones y Aranceles</a></p>   
+            <p>info@richmondcapital.com.ar</p>
+            <p><a href="https://www.rabello.com/Aranceles%20y%20comisiones%20ARG.pdf" target="_blank">Comisiones y
+                    Aranceles</a></p>
         </div>
     </footer>
+    <script src="./js/bootstrap.bundle.js"></script>
+    <script src="./js/script.js"></script>
+
 </body>
 
 </html>
