--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </a>
             </li>
         </ul>
-        
+
     </header>
     <main>
         <section class="section1">
@@ -113,15 +113,60 @@
                     </div>
                 </div>
             </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-inner">
+                    <div class="front">
+                        <img src="./assets/icono_cedears.png" class="card-img-top" alt="Icono CEDEARS">
+
+                        <div class="card-body">
+                            <h5 class="card-title">CEDEARS</h5>
+                        </div>
+
+                    </div>
+
+                    <div class="back">
+                        <div class="card-body">
+                            <h5 class="card-title">CEDEARS</h5>
+                            <p>
+                                sakjhaslsdhaljshdk
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="width: 18rem;">
+                <div class="card-inner">
+                    <div class="front">
+                        <img src="./assets/icono_fondos.png" class="card-img-top" alt="Icono CEDEARS">
+
+                        <div class="card-body">
+                            <h5 class="card-title">Fondos</h5>
+                        </div>
+
+                    </div>
+
+                    <div class="back">
+                        <div class="card-body">
+                            <h5 class="card-title">Fondos</h5>
+                            <p>
+                                sakjhaslsdhaljshdk
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
 
 
         </section>
     </main>
     <footer>
-        <div>
+        <div class="footer-div">
             <p>Av. Corrientes 415 - CABA</p>
             <p>Buenos Aires - Argentina</p>
+        </div>
+        <div class="footer-div">
             <p>info@richmondcapital.com.ar</p>
             <p><a href="https://www.rabello.com/Aranceles%20y%20comisiones%20ARG.pdf" target="_blank">Comisiones y
                     Aranceles</a></p>
