--- a/index.html
+++ b/index.html
@@ -13,33 +13,37 @@
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="./js/script.js"></script>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="container">
     <header>
         <div class="logos">
             <a href="./index.html">
-                <img src="./assets/imagotipo.png" alt="Imagotipo richmond capital" width="100px">
+                <img src="./assets/imagotipo.png" alt="Imagotipo richmond capital" width="150px" >
             </a>
             <a href="https://www.inviu.com.ar/" target="_blank">
-                <img src="./assets/605cd3b568ff6_700_491.png" alt="Logo Inviu" width="100px">
+                <img src="./assets/605cd3b568ff6_700_491.png" alt="Logo Inviu" width="150px">
 
             </a>
         </div>
 
         <ul class="navli">
             <li>
-                <a href="./index.html">
+                <a class="sin-color" href="./index.html">
                     Home
                 </a>
             </li>
             <li>
-                <a href="#productos">
+                <a class="sin-color" href="#productos">
                     Productos
                 </a>
             </li>
             <li>
-                <a href="#research">
+                <a class="sin-color" href="#research">
                     Research
                 </a>
             </li>
