--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Richmond Capital</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
 
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="./js/script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -173,6 +176,11 @@
 
 
             </section>
+            <section>
+                <a href="https://wa.me/xxxxxxxxxx?text=Hola%20desde%20mi%20sitio%20web" target="_blank"
+                    id="whatsapp-link">
+                    <img src="" alt="WhatsApp Icon"></a>
+            </section>
         </main>
         <footer>
             <div class="footer-div">
@@ -188,7 +196,7 @@
 
         <script>
             // URL de ejemplo con placeholders, reemplázalos con tu información real
-            const spreadsheetUrl = "https://sheets.googleapis.com/v4/spreadsheets/1j4kRHvXxY55_XuP-loFPKCicl6zcsIrwh9mJZlw2UaI/values/Sheet1!A1:B10?key=AIzaSyCfvKYbsT7apFZNU5MeQ50BPs9wLNXmWzc";
+            const spreadsheetUrl = "https://sheets.googleapis.com/v4/spreadsheets/1j4kRHvXxY55_XuP-loFPKCicl6zcsIrwh9mJZlw2UaI/values/Sheet1!A2:B7?key=AIzaSyCfvKYbsT7apFZNU5MeQ50BPs9wLNXmWzc";
 
 
             // Llamar a la función para cargar y mostrar datos
