--- a/pages/persona_humana.html
+++ b/pages/persona_humana.html
@@ -1,11 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <header>
+
+            <div class="logos">
+                <a href="./index.html">
+                    <img src="../assets/imagotipo.png" alt="Imagotipo richmond capital" width="150px">
+                </a>
+                <a href="https://www.inviu.com.ar/" target="_blank">
+                    <img src="../assets/605cd3b568ff6_700_491.png" alt="Logo Inviu" width="150px">
+
+                </a>
+            </div>
+            <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"><img src="../assets/pngegg.png" alt="Boton menu desplegable"
+                        width="20px"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../index.html" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Productos
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="../index.html">Acciones</a>
+                            <a class="dropdown-item" href="../index.html">Bonos</a>
+                            <a class="dropdown-item" href="../index.html">CEDEARS</a>
+                            <a class="dropdown-item" href="../index.html">Fondos</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Research</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
+        <main>
+            <div>
+                <h1>Abrí tu cuenta y empezá a invertir.</h1>
+                <h3>Te contamos cómo hacerlo en pocos pasos:</h3>
+            </div>
+            <div>
+                <ul>
+                    <li>
+                        Descargá la app a tu celular
+                    </li>
+                    <li>
+                        Ingresá como alias de asesor:RICHMONDCAPITAL.INVIU y creá tu cuenta.
+                    </li>
+                    <li>
+                        Vas a recibir un mail para que confirmes tus datos.
+                    </li>
+                    <li>
+                        Escaneá frente y dorso de tu DNI.
+                    </li>
+                    <li>
+                        Sacate una selfie.
+                    </li>
+                    <li>
+                        Completá tus datos personales y ¡Listo!.
+                    </li>
+                </ul>
+            </div>
+        </main>
+        <footer>
+
+        </footer>
+    </div>
 </body>
+
 </html>
