se añadieron animaciones al header y section 1 por css y scripts. Se quito el logowpp

--- a/pages/abrir_cuenta.html
+++ b/pages/abrir_cuenta.html
@@ -27,7 +27,7 @@
         <header>
 
             <div class="logos">
-                <a href="./index.html">
+                <a href="../index.html">
                     <img src="../assets/imagotipo.png" alt="Imagotipo richmond capital" width="150px">
                 </a>
                 <a href="https://www.inviu.com.ar/" target="_blank">
