--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Richmond Capital</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
@@ -28,10 +28,10 @@
 
             <div class="logos">
                 <a href="./index.html">
-                    <img src="./assets/imagotipo.png" alt="Imagotipo richmond capital" width="150px">
+                    <img class="off-screen" src="./assets/imagotipo.png" alt="Imagotipo richmond capital" width="150px">
                 </a>
                 <a href="https://www.inviu.com.ar/" target="_blank">
-                    <img src="./assets/605cd3b568ff6_700_491.png" alt="Logo Inviu" width="150px">
+                    <img class="off-screen" src="./assets/605cd3b568ff6_700_491.png" alt="Logo Inviu" width="150px">
 
                 </a>
             </div>
@@ -176,11 +176,6 @@
 
 
             </section>
-            <section>
-                <a href="https://wa.me/xxxxxxxxxx?text=Hola%20desde%20mi%20sitio%20web" target="_blank"
-                    id="whatsapp-link">
-                    <img src="" alt="WhatsApp Icon"></a>
-            </section>
         </main>
         <footer>
             <div class="footer-div">
@@ -246,6 +241,42 @@
             }
 
         </script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                var logosImages = document.querySelectorAll('.logos img');
+
+                // Agrega la clase 'animate' después de un breve retraso
+                logosImages.forEach(function (image, index) {
+                    setTimeout(function () {
+                        image.classList.add('animate');
+                    }, index * 300); // Ajusta el retraso según tus preferencias
+                });
+            });
+        </script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+                var buttons = document.querySelectorAll('.button-opera, .button-abrir');
+
+                // Añade la clase 'animate' después de un breve retraso
+                buttons.forEach(function (button, index) {
+                    setTimeout(function () {
+                        button.classList.add('animate');
+                    }, index * 300); // Ajusta el retraso según tus preferencias
+                });
+            });
+        </script>
+        <script>
+            document.addEventListener("DOMContentLoaded", function () {
+              var elementsToAnimate = document.querySelectorAll('.radius, .no-margin');
+        
+              // Añade la clase 'animate' después de un breve retraso
+              elementsToAnimate.forEach(function (element, index) {
+                setTimeout(function () {
+                  element.classList.add('animate');
+                }, index * 300); // Ajusta el retraso según tus preferencias
+              });
+            });
+          </script>
     </div>
 </body>
 
